# aras_ir_tracker

./: README.md  requirements.txt
camera_nodes/ps3_eye/ps3_image_publisher/: CMakeLists.txt  package.xml
camera_nodes/ps3_eye/ps3_image_publisher/launch/: single_camera.launch
camera_nodes/ps3_eye/ps3_image_publisher/nodes/: image_publisher.py
camera_nodes/ps3_eye/ros/image_publisher/: CMakeLists.txt
camera_nodes/ps3_eye/ros/image_publisher/nodes/: image_publisher.py  utils.py
camera_nodes/ps3_eye/ros/image_publisher_cpp/: CMakeLists.txt  package.xml
camera_nodes/ps3_eye/ros/image_publisher_cpp/launch/: launch_camera1.launch
camera_nodes/ps3_eye/ros/image_publisher_cpp/src/: image_publisher.cpp  marker_publisher.cpp
camera_nodes/ps3_eye/standalone/: .config_file.yaml  config.yaml  config.yaml'  config2.yaml  dataset_config_station_3_4.yaml  dataset_config_station_cam1_cam2.yaml  dataset_config_station_cam3_cam4.yaml  dataset_config_station_left_right.yaml  mult_camera_node.py  mult_camera_node_img_show.py  mult_camera_record.py  output_left.avi
camera_nodes/ps3_eye/standalone/.ipynb_checkpoints/: 6DOF_IR_Tracker-checkpoint.ipynb  Extrinsic_Calibration_and_Triangulation-checkpoint.ipynb  Matlab_Calib_to_OpenCV-checkpoint.ipynb  UDP_WS-checkpoint.ipynb  calib_video_recorder-checkpoint.ipynb  dataset_generator-checkpoint.ipynb
camera_nodes/ps3_eye/standalone/params/: cam2_params.yaml  cam3_params.yaml
camera_nodes/ps3_eye/standalone/src/: ir_tracker_utils.py  telemetry_utils.py
camera_nodes/raspberry/: buildme  clustering.c  clustering.h  pll_controller.c  pll_controller.h  raspisync_tracker  raspisync_tracker.c  udp_marker_bridge  udp_marker_bridge.c  udp_marker_bridge_standalone.c  udp_pixel_bridge  udp_pixel_bridge.c
ros_ws/devel/: .catkin  local_setup.sh  setup.sh
ros_ws/devel/include/image_publisher/: camera_cfgsConfig.h
ros_ws/devel/lib/pkgconfig/: image_publisher.pc
ros_ws/src/image_publisher/launch/: launch_mono_camera.launch
ros_ws/src/image_publisher/nodes/: image_publisher_node.py  utils.py
server_nodes/raspitrack_udp_bridge/: package.xml
server_nodes/raspitrack_udp_bridge/launch/: single_tracker_marker.launch
server_nodes/udp_bridge/ROS/raspitrack_udp_bridge/: CMakeLists.txt
server_nodes/udp_bridge/ROS/raspitrack_udp_bridge/launch/: single_tracker_image.launch
server_nodes/udp_bridge/ROS/raspitrack_udp_bridge/src/: image_publisher.cpp  marker_publisher.cpp
server_nodes/udp_bridge/standalone/: README.md  UDP_WS.ipynb  calibration_backup.tar.xz  config.yaml  reading_calib_data.ipynb  udp_bridge_node.py
server_nodes/udp_bridge/standalone/.ipynb_checkpoints/: UDP_WS-checkpoint.ipynb  reading_calib_data-checkpoint.ipynb
server_nodes/udp_bridge/standalone/recorded_data/: recorded-2021-06-10-12:45:18.pckl
server_nodes/udp_bridge/standalone/src/: telemetry_utils.py
stereo_pose_tracker/: config.yaml  sample_config.yaml  stereo_pointcloude_extractor.py  stereo_tracker_3d.py
stereo_pose_tracker/params/: ext_params.pckl
stereo_pose_tracker/params/sample/: ext_params.pckl
stereo_pose_tracker/src/: bundle_adjustment.py  cameras.py  telemetry_utils.py
tracker_nodes/ps3_eye/: config.yaml  sample_config.yaml
udp_aggregator/: config.yaml
(+9 files in other folders)
